Phani | 1204633988335095 | [Bug] Alignment and CSS issue introduced by Carbon (#279)
* Recurring Appointments

* Recurring Appointments

* Update locale

* Refactor Tags to use carbon components

* Update CSS styling for recurring appointments

* Update CSS to use inline-block

* Update CSS for Time Picker

* Update CSS for Time Picker for regular appointments

* Fix failing tests

* Disable autocomplete

* Modify the dropdown option

* Cleanup unused

* Cleanup unused

* Fix build

* Refactor labels for Recurring appointments

* Fix theme

* Add font family to label

* Fix font for Repeats on label

* Change Error Messages font to carbon style

--- a/ui/react-components/components/AddAppointment/AddAppointment.module.scss
+++ b/ui/react-components/components/AddAppointment/AddAppointment.module.scss
@@ -10,6 +10,7 @@
   top: 0;
   height: 100%;
   min-height: 115%;
+  -webkit-box-sizing: border-box;
   &.isRecurring {
     min-height: 140%;
   }
@@ -78,7 +79,7 @@
   position: fixed;
   bottom: 0;
   right: 0;
-  top: 108px;
+  top: 112px;
   min-width: 540px;
   z-index: 499;
   display: flex;
